# valkyrie

./: .gitignore  Makefile  README.md  docker-compose.yaml  loader.py  main.py  package-lock.json  package.json  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.js  AuthContext.js  BarChart.js  Chart.js  Config.js  Context.js  Dashboard.css  Dashboard.js  DataService.js  Datasources.js  Filter.js  Measurements.js  MyChart.js  ProtectedRoute.js  dashboard.css  index.css  index.js
dashboard/src/admin/: Admin.js  Charts.js  Dashboards.js  Datasources.js  Filters.js  Login.js  Measurements.js  Tooltip.js
dashboard/src/styles/: App.css  index.css
docs/: valkyrie.drawio
valkyrie/: database.py  kafka.py  loader.py  main.py  models.py  ws.py
valkyrie/routes/: bulk.py  charts.py  dashboards.py  datasources.py  filters.py  graph.py  measurements.py
valkyrie/tests/routes/: test_measurements.py
valkyrie/util/: config.py  database.py  kafka.py  protocol.py  singleton.py
