[tool.poetry]
name = "valkyrie"
version = "0.1.0"
description = ""
authors = ["Rogerio Biondi <rogerio.biondi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
websockets = "^12.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.24"
psycopg2 = "^2.9.9"
sqlalchemy-timescaledb = "^0.4.1"
json-flatten = "^0.3"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
