[tool.poetry]
name = "valkyrie"
version = "0.1.0"
description = ""
authors = ["Rogerio Biondi <rogerio.biondi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.104.1"
websockets = "^12.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.24"
psycopg2 = "^2.9.9"
sqlalchemy-timescaledb = "^0.4.1"
json-flatten = "^0.3"
confluent-kafka = "^2.3.0"
pytest = "^8.3.5"
kafka-python = "^2.0.6"
dotenv = "^0.9.9"
pyfiglet = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
